add a footer to all dashboards that links to the git source in the new datil repo on github

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,5 +54,10 @@
 
 <p id="debug"></p>
 <ul id="debugLog"></ul>
+<div id="footer">
+If interested,
+<a href="https://github.com/KaiRo-at/datil/tree/master/dashboard">take
+a look at the source</a> of this dashboard.
+</div>
 </body>
 </html>
