--- a/longtermgraph/index.html
+++ b/longtermgraph/index.html
@@ -29,5 +29,10 @@
 <h1>Crash Rate History</h1>
 <div id="notification" class="hidden"></div>
 <div id="graphdiv"></div>
+<div id="footer">
+If interested,
+<a href="https://github.com/KaiRo-at/datil/tree/master/longtermgraph">take
+a look at the source</a> of this dashboard.
+</div>
 </body>
 </html>
