--- a/score/index.html
+++ b/score/index.html
@@ -33,7 +33,7 @@ for notes.</p>
 <div id="footer">
 This dashboard is experimental. Give feedback and suggestions to KaiRo.
 If interested,
-<a href="https://hg.mozilla.org/users/kairo_kairo.at/crash-report-tools/file/default/score">take
+<a href="https://github.com/KaiRo-at/datil/tree/master/score">take
 a look at the source</a>.
 </div>
 </body>
