--- a/score/index.html
+++ b/score/index.html
@@ -15,7 +15,8 @@
 <p id="dataLine">Analyzing
 <span id="repDuration"></span> days up to <span id="repDate"></span>
 for <span id="repPType"></span> crashes
-of <span id="repProd"></span> version: <span id="repVer"></span></p>
+of <span id="repProd"></span> version: <span id="repVer"></span>
+(<a href="" id="repSearch">search</a>)</p>
 <p class="help">Note: This is a prototype, see the
 <a href="https://etherpad.mozilla.org/topcrash-weighted">etherpad</a>
 for notes.</p>
