allow more parameters to be set, use current date instead of matview date as we don't depend on matviews any more, allow queries up to 'now'

--- a/score/index.html
+++ b/score/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1>Top Crash Scores - Prototype</h1>
 <p id="dataLine">Analyzing
-<span id="repDuration"></span> days up to <span id="repDate"></span>
+<span id="repDuration"></span> days <span id="repDateMode"></span> <span id="repDate"></span>
 for <span id="repPType"></span> crashes
 of <span id="repProd"></span> version: <span id="repVer"></span>
 (<a href="" id="repSearch">search</a>)</p>
