--- a/score/index.html
+++ b/score/index.html
@@ -16,6 +16,7 @@
 <span id="repDuration"></span> days <span id="repDateMode"></span> <span id="repDate"></span>
 for <span id="repPType"></span> crashes
 of <span id="repProd"></span> version: <span id="repVer"></span>
+<span id="repBIDcontainer" style="display:none;">- build ID: <span id="repBuildID"></span></span>
 (<a href="" id="repSearch">search</a>)</p>
 <p class="help">Note: This is a prototype, see the
 <a href="https://etherpad.mozilla.org/topcrash-weighted">etherpad</a>
