document all the tools

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -39,7 +39,7 @@
 <h2></h2>
 
 <table border="1">
-<tr class="headers"><th rowspan="2">Branch</th></tr>
+<tr class="headers"><th rowspan="2">Channel</th></tr>
 <tr class="versions"></tr>
 <tr class="adi"><th>ADI</th></tr>
 <tr class="rateBrCo"><th>Crash rate (b+c)</th></tr>
